test/Fail/Issue1886-modality.err
Issue1886-modality.agda:8.17-18: error: [UnexpectedModalityAnnotationInParameter]
Unexpected modality/relevance annotation in (@erased A)
when checking the definition of D
